# MdToPdf

./: .coverage  .gitignore  AGENTS.md  README.md  build_exe.py  build_macos.sh  create_icon.py  gui_entry.py  mdtopdf-gui.spec  pyproject.toml  requirements-dev.txt  requirements.txt
CRD/: crd.md
assets/icons/: icon.icns
docs/: system_design.md
mdtopdf/: __init__.py  main.py
mdtopdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mdtopdf/assets/styles/: default.css
mdtopdf/assets/templates/: document.html
mdtopdf/config/: config_loader.py  default_config.yaml  models.py
mdtopdf/core/: __init__.py  assembler.py  parser.py  pdf_generator.py  previewer.py
mdtopdf/core/renderer/: __init__.py  base.py  mermaid_renderer.py  plantuml_renderer.py
mdtopdf/gui/: __init__.py  app.py  preview.py
mdtopdf/utils/: file_utils.py  logger.py  temp_manager.py
tests/: latex_katex.md  test_assembler.py  test_config.py  test_image_inline.py  test_main_merge.py  test_math_pipeline_equivalence.py  test_parser.py  test_pdf_generator.py  test_renderers.py  test_utils.py
tests/fixtures/: sample_basic.md  sample_with_diagrams.md
